Issue #2065151 by Zarabadoo: Prevent the invisible selects from overflowing thier containers when inactive and causing too much target area.

--- a/css/responsive.custom.css
+++ b/css/responsive.custom.css
@@ -129,7 +129,7 @@
  */
 @media only screen and (min-width: 768px) {
   body.front.not-logged-in #content {
-    background: url('../images/commons-drop.png?1376500603') right top no-repeat;
+    background: url('../images/commons-drop.png?1363371593') right top no-repeat;
   }
   body.front.not-logged-in .region-three-33-top {
     margin-bottom: 24px;
